<resources>
    <string name="app_name">Subte off-line</string>
    <string name="contact">Si tenés sugerencias podés escribirme acá:</string>
    <string name="contact_us">Contactame   </string>
    <string name="who_am_i">Esta APP te permite ver los nombres, horarios, combinaciones y las calles entre cada estación.\n\nSi tenés información o ideas para agregarle a esta APP por favor contactame.</string>
    <string name="vertical">Si algunos textos no entran en tu pantalla... girala:</string>
    <string name="rate">Ayudame con 5 estrellas en el store para seguir mejorando, GRACIAS!!\n\n
                        Si querés donar algunos centavos de BTC, mi cta es: \n\n19oenMRPHrab8V2oXQmGuYjPit4CG8CzVk\n\n y me podés encontrar en telegram en el grupo \n\n@Argenpool\n\n como ARG_Cristian</string>

    <string name="contact_email">tangolytics@gmail.com</string>
    <string name="choose_email">Selecciona tu email</string>
    <string name="lineas">Lineas</string>
    <string name="horarios">Horarios</string>
    <string name="precios">Precios</string>
    <string name="compartir">Compartir</string>
    <string name="primer_subte">Primer Subte</string>
    <string name="ultimo_subte">Ultimo Subte</string>
    <string name="splash_titulo_arriba">Espacio disponible para anunciantes</string>
    <string name="splash_titulo_abajo">Reservado para publicidad</string>
    <string name="splash_cargando">Cargando... </string>
    <string name="version">v.1.36</string>

    //Linea A
    <string name="linea_a">Linea A</string>
    <string name="cabeceras_a">(Viaje entre cabeceras: 26 minutos)</string>
    <string name="frecuencia_dias_habiles_a">Días Hábiles (3 min)</string>
    <string name="frecuencia_sabados_a">Sábados (7 min)</string>
    <string name="frecuencia_domingos_a">Domingos y Feriados (8 min)</string>
    <string name="linea_a_hacia_arriba">a Pza. de Mayo  </string>
    <string name="linea_a_hacia_abajo">a San Pedrito  </string>

    //Linea B
    <string name="linea_b">Linea B</string>
    <string name="cabeceras_b">(Viaje entre cabeceras: 27 minutos)</string>
    <string name="frecuencia_dias_habiles_b">Días Hábiles (2,49 min)</string>
    <string name="frecuencia_sabados_b">Sábados (7 min)</string>
    <string name="frecuencia_domingos_b">Domingos y Feriados (8,05 min)</string>
    <string name="linea_b_hacia_arriba">a Leandro N.Alem  </string>
    <string name="linea_b_hacia_abajo">a Juan Manuel de Rosas  </string>

    //Linea C
    <string name="linea_c">Linea C</string>
    <string name="cabeceras_c">(Viaje entre cabeceras: 13 minutos)</string>
    <string name="frecuencia_dias_habiles_c">Días Hábiles (2,57 min )</string>
    <string name="frecuencia_sabados_c">Sábados (6 min)</string>
    <string name="frecuencia_domingos_c">Domingos y Feriados (7,30 min)</string>
    <string name="linea_c_hacia_arriba">a Retiro  </string>
    <string name="linea_c_hacia_abajo">a Consitución  </string>

    //Linea D
    <string name="linea_d">Linea D</string>
    <string name="cabeceras_d">(Viaje entre cabeceras: 26 minutos)</string>
    <string name="frecuencia_dias_habiles_d">Días Hábiles (2,44 min)</string>
    <string name="frecuencia_sabados_d">Sábados (7 min)</string>
    <string name="frecuencia_domingos_d">Domingos y Feriados (7 min)</string>
    <string name="linea_d_hacia_arriba">a Catedral  </string>
    <string name="linea_d_hacia_abajo">a Congreso de Tucumán  </string>

    //Linea E
    <string name="linea_e">Linea E</string>
    <string name="cabeceras_e">(Viaje entre cabeceras: 24 minutos)</string>
    <string name="frecuencia_dias_habiles_e">Días Hábiles (5,06 min)</string>
    <string name="frecuencia_sabados_e">Sábados (8,05 min)</string>
    <string name="frecuencia_domingos_e">Domingos y Feriados (8,05 min)</string>
    <string name="linea_e_hacia_arriba">a Bolivar  </string>
    <string name="linea_e_hacia_abajo">a Plaza de los Virreyes  </string>

    //Linea H
    <string name="linea_h">Linea H</string>
    <string name="cabeceras_h">(Viaje entre cabeceras: 18 minutos)</string>
    <string name="frecuencia_dias_habiles_h">Días Hábiles (2,57 min)</string>
    <string name="frecuencia_sabados_h">Sábados (6,10 min)</string>
    <string name="frecuencia_domingos_h">Domingos y Feriados (6,10 min)</string>
    <string name="linea_h_hacia_arriba">a Las Heras  </string>
    <string name="linea_h_hacia_abajo">a Hospitales  </string>
    <string name="h_in_construction"> habilitada</string>
    <string name="warning_h">CERRADA HASTA EL 4 JULIO POR REFACCIONES</string>

    //Precios
    <string name="precios_cant_viajes">Cantidad de viajes mensuales</string>
    <string name="precios_titulo_subte">Subte</string>
    <string name="precios_titulo_premetro">Premetro</string>
    <string name="precio_01a20">1 a 20</string>
    <string name="precio_21a30">21 a 30</string>
    <string name="precio_31a40">31 a 40</string>
    <string name="precio_41">+ de 41</string>
    <string name="precio1">$7.50</string>
    <string name="precio2">$6.00</string>
    <string name="precio3">$5.25</string>
    <string name="precio4">$4.50</string>
    <string name="precio5">$2.50</string>
    <string name="precio_premetro_mensaje">Precio único, no cambia por cantidad de viajes</string>
    <string name="precio_jubilados_pensionados">Pases de: jubilados, pensionados, discapacitados y estudiantes primarios, son subsidiados en su totalidad.\n
        Quien tienen planes sociales, desempleados, indigentes, víctimas de Cromañón, ex combatientes de Malvinas, su valor es $ 4,00.\n
        Abono estudiantil es de $ 80\nAbono maestro es de $ 160.\n</string>

    //Dialogos combinaciones
    <string name="combinacion_con_lineas">Combinación con líneas:</string>

    //ADS
    <string name="native_moztaza">ca-app-pub-2298399460655020/2124718590</string>
    <string name="native_black">ca-app-pub-2298399460655020/5979508591</string>
    <string name="banner">ca-app-pub-2298399460655020/6585270993</string>


</resources>
