<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:elevation="@dimen/shadow"
    android:background="@android:color/black">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/A"
                android:elevation="@dimen/shadow"
                style="@style/CustomButtonA"
                android:shadowColor="#ffffff"
                android:scaleType="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/linea_a"
                android:textColor="#ffffff"
                android:textSize="25dp"
                android:textStyle="bold"
                android:onClick="btnA"
                android:layout_margin="5dp"
                android:clickable="true"/>


            <Button
                android:id="@+id/B"
                android:elevation="@dimen/shadow"

                style="@style/CustomButtonB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/linea_b"
                android:textColor="#ffffff"
                android:textSize="25dp"
                android:textStyle="bold"
                android:onClick="btnB"
                android:layout_margin="5dp"/>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/C"
                style="@style/CustomButtonC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/linea_c"
                android:textColor="#ffffff"
                android:textSize="25dp"
                android:textStyle="bold"
                android:onClick="btnC"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/D"
                style="@style/CustomButtonD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/linea_d"
                android:textColor="#ffffff"
                android:textSize="25dp"
                android:textStyle="bold"
                android:onClick="btnD"
                android:layout_margin="5dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/E"
                style="@style/CustomButtonE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/linea_e"
                android:textColor="#ffffff"
                android:textSize="25dp"
                android:textStyle="bold"
                android:onClick="btnE"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/H"
                style="@style/CustomButtonH"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/linea_h"
                android:textColor="#828283"
                android:textSize="25dp"
                android:textStyle="bold"
                android:onClick="btnH"
                android:layout_margin="5dp"/>


        </TableRow>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="@style/CustomBackgroundAds">

        <com.google.android.gms.ads.NativeExpressAdView

            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adUnitId="@string/native_moztaza"
            ads:adSize="320x132"
            >


        </com.google.android.gms.ads.NativeExpressAdView>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.03"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:elevation="@dimen/shadow"

            android:layout_weight="1"
            android:paddingStart="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="#ffffff"
            android:text="@string/version"
            android:onClick="btnContactUs"
            android:gravity="center_vertical" />

        <ImageView
            android:layout_width="0dp"
            android:elevation="@dimen/shadow"

            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_info_details"
            android:onClick="btnContact"/>

        <ImageView
            android:layout_width="0dp"
            android:elevation="@dimen/shadow"

            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="1"
            android:src="@android:drawable/ic_dialog_email"
            android:onClick="btnContactUs"/>

    </LinearLayout>

    </TableLayout>

