<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/linearLayout">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"


        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cabeceras_h"
                android:gravity="center"
                android:textColor="#ffffff"
                android:layout_margin="10dp"

                />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/frecuencia_dias_habiles_h"
        android:gravity="center"
        android:textColor="#607d8b"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"

            android:textColor="#ffffff"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:gravity="end"
            android:text="@string/primer_subte"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:text="@string/ultimo_subte"
            android:textStyle="bold"
            android:gravity="end"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="Hospitales"
            android:textColor="#ffffff"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:gravity="end"
            android:text="05.00"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:text="23.22"
            android:gravity="end"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="Las Heras"
            android:textColor="#ffffff"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:gravity="end"
            android:text="05.00"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:gravity="end"
            android:text="23.02"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

    </LinearLayout>

    //----------------------------------

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/frecuencia_sabados_h"
        android:gravity="center"
        android:textColor="#607d8b"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_weight="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:gravity="end"
            android:text="@string/primer_subte"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:text="@string/ultimo_subte"
            android:textStyle="bold"
            android:gravity="end"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="Hospitales"
            android:textColor="#ffffff"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:gravity="end"
            android:text="05.00"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:text="23.22"
            android:gravity="end"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="Las Heras"
            android:textColor="#ffffff"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:gravity="end"
            android:text="05.00"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:text="23.02"
            android:gravity="end"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

    </LinearLayout>

    //----------------------------------

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/frecuencia_domingos_h"
        android:gravity="center"
        android:textColor="#607d8b"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_weight="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:gravity="end"
            android:text="@string/primer_subte"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:gravity="end"
            android:text="@string/ultimo_subte"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="Hospitales"
            android:textColor="#ffffff"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:gravity="end"
            android:text="08.00"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:text="22.50"
            android:gravity="end"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="Las Heras"
            android:textColor="#ffffff"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:gravity="end"
            android:text="08.00"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:text="22.30"
            android:gravity="end"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

    </LinearLayout>
        </LinearLayout>
    </ScrollView>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/close"
        android:layout_gravity="right"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:onClick="btnClose"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>